suppression des cartes
suppression des cartes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="card-last-updated" hidden></div>
       <div class="location"></div>
       <div class="date"></div>
-      <div class="description"></div>
+      <div class="description principal"></div>
       <div class="current">
         <div class="visual">
           <div class="icon"></div>
